加了宣传图和宣传语

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1>我们是卖猪头的</h1>
     <h2>我们的猪头好吃</h2>
+    <img src="假装有图片.jpg" alt="假装有图片">
+    <p>猪是人类的朋友</p>
+
 </body>
 
 </html>
