22老板娘需求

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="假装有图片.jpg" alt="假装有图片">
     <p>猪是人类的朋友</p>
     我们老板娘买了最好的饲料，猪肉很好吃
+    <img src="老板娘的美照.jpg" alt="">
 </body>
 
 </html>
